pandoc2rfc (0.8.7)

 * If you enter a caption for a figure - center the figure, otherwise leave it to
   the default (left aligned).

 -- Miek Gieben <miek@miek.nl>  

 
pandoc2rfc (0.8.6)

 * Dropped AsciiDoc
 * Make it possible to reference figure/artworks and tables, in very much
   the same way as referencing sections.

 -- Miek Gieben <miek@miek.nl>  

 
pandoc2rfc (0.8.5)

 * Use the default list markers (#.) to signal a <list style="empty">
   paragraph.

 -- Miek Gieben <miek@miek.nl>  


pandoc2rfc (0.8.4)

 * Allow for multiple paragraphs (faked with vspace) in lists

 -- Miek Gieben <miek@miek.nl>  


pandoc2rfc (0.8.3)

 * Fix tables as generated by pandoc 1.9+ (informaltables)

 -- Miek Gieben <miek@miek.nl>  


pandoc2rfc (0.8.2)

 * Add `single-xml` to create one large XML file. For easy
    upload to the IETF.

 -- Miek Gieben <miek@miek.nl>  Sun, 01 Jan 2012 22:03:30 +0100


pandoc2rfc (0.8.1)

 * Assorted bugfixes.
 * Syntax coloring more in sync between Pandoc and AsciiDoc.
 * Added AUTHORS and CONTRIBUTORS file.

 -- Miek Gieben <miek@miek.nl>  Tue, 27 Dec 2011 20:32:01 +0100


pandoc2rfc (0.8)

 * Started a changelog.
 * Pandoc is supported as input language.
 * AsciiDoc is supported as input language.

 -- Miek Gieben <miek@miek.nl>  Sun, 25 Dec 2011 11:05:00 +0100